[package]
name = "find-a-date-everyone-can-do"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
tinyid = "1.0.3"
