[package]
name = "find-a-date-everyone-can-do"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
tinyid = "1.0.3"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = ["with-uuid-0_8"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
config = "0.13.1"
derive_more = "0.99.17"
rustls = "0.21.2"
openssl = "0.10.38"
postgres-openssl = "0.5.0"
serde_json = "1.0.99"
uuid = { version = "1.3.4", features = ["serde", "v4"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
postgres = { version = "0.19.5", features = ["with-uuid-1"] }
