[package]
name = "find-a-date-everyone-can-do"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = "0.4.26"
config = "0.13.3"
deadpool-postgres = { version = "0.10.5", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
openssl = "0.10.55"
postgres = { version = "0.19.5", features = ["with-uuid-1", "with-chrono-0_4"] }
postgres-openssl = "0.5.0"
serde = "1.0.164"
tokio-pg-mapper = "0.2.0"
tokio-postgres = "0.7.8"
uuid = "1.4.0"
